syntax = "proto3";

package user;

message SignInUserRequest {
    string email = 1;
    string password = 2;
}

message SignInUserResponse {
    string accessToken = 1;
    string refreshToken = 2;
}

